--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <div class="container">
-        <div class="section">
+        <section>
           <div class="container-texts">
             <h1>Get <span>insights </span> that help your business grow.</h1>
             <p>
@@ -50,12 +50,12 @@
               <h3>queries</h3>
             </div>
           </div>
-        </div>
+        </section>
         <div class="container-img">
           <img src="images/image-header-desktop.jpg" alt="" />
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div class="attribution">
         Challenge by
